2nd/4463b6f0ea7c4307f4d1cac88179559396ead515.txt
test/bntest.c:611: error: INTEGER_OVERFLOW_L5
  ([-oo, +oo] + [-oo, +oo]):signed32 by call to `BN_mul`.
Showing all 10 steps of the trace


test/bntest.c:583:13: Call
581.           if (i < num1) {
582.               BN_bntest_rand(a, 400, 0, 0);
583.               BN_copy(b, a);
                   ^
584.               BN_lshift(a, a, i);
585.               BN_add_word(a, i);

crypto/bn/bn_lib.c:362:1: Parameter `a->top`
  360.   }
  361.   
  362. > BIGNUM *BN_copy(BIGNUM *a, const BIGNUM *b)
  363.   {
  364.       int i;

test/bntest.c:611:9: Call
609.               BIO_puts(bp, "\n");
610.           }
611.           BN_mul(e, d, b, ctx);
               ^
612.           BN_add(d, e, c);
613.           BN_sub(d, d, a);

crypto/bn/bn_mul.c:828:1: <LHS trace>
826.   #endif                          /* BN_RECURSION */
827.   
828. > int BN_mul(BIGNUM *r, const BIGNUM *a, const BIGNUM *b, BN_CTX *ctx)
829.   {
830.       int ret = 0;

crypto/bn/bn_mul.c:828:1: Parameter `a->top`
  826.   #endif                          /* BN_RECURSION */
  827.   
  828. > int BN_mul(BIGNUM *r, const BIGNUM *a, const BIGNUM *b, BN_CTX *ctx)
  829.   {
  830.       int ret = 0;

crypto/bn/bn_mul.c:845:5: Assignment
  843.       bn_check_top(r);
  844.   
  845.       al = a->top;
             ^
  846.       bl = b->top;
  847.   

crypto/bn/bn_mul.c:828:1: <RHS trace>
826.   #endif                          /* BN_RECURSION */
827.   
828. > int BN_mul(BIGNUM *r, const BIGNUM *a, const BIGNUM *b, BN_CTX *ctx)
829.   {
830.       int ret = 0;

crypto/bn/bn_mul.c:828:1: Parameter `b->top`
  826.   #endif                          /* BN_RECURSION */
  827.   
  828. > int BN_mul(BIGNUM *r, const BIGNUM *a, const BIGNUM *b, BN_CTX *ctx)
  829.   {
  830.       int ret = 0;

crypto/bn/bn_mul.c:846:5: Assignment
  844.   
  845.       al = a->top;
  846.       bl = b->top;
             ^
  847.   
  848.       if ((al == 0) || (bl == 0)) {

crypto/bn/bn_mul.c:852:5: Binary operation: ([-oo, +oo] + [-oo, +oo]):signed32 by call to `BN_mul` 
  850.           return (1);
  851.       }
  852.       top = al + bl;
             ^
  853.   
  854.       BN_CTX_start(ctx);
